--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -37,8 +37,7 @@ var flagcounter_img_src = config.flagcounter_img_src;
                 </ul>
                 <div class="footer-theme-info">
 
-                    <a href="https://translate.google.com/translate?sl=cn&tl=en&u=<%= url %>"> View in English </a> | | Theme <a href="//github.com/sabrinaluo/hexo-theme-replica">Replica</a> by <a href="//github.com/sabrinaluo">Hiitea</a> ❤ Powered by
-                    Hexo
+                    <a href="https://translate.google.com/translate?sl=cn&tl=en&u=<%= url %>"> View in English </a> | Theme <a href="//github.com/sabrinaluo/hexo-theme-replica">Replica</a> by <a href="//github.com/sabrinaluo">Hiitea</a> ❤ Powered by Hexo
 
                     <script type="text/javascript">
                         var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");
