--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -44,6 +44,8 @@ var flagcounter_img_src = config.flagcounter_img_src;
                         document.write(unescape("%3Cspan id='cnzz_stat_icon_1277954792'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "v1.cnzz.com/z_stat.php%3Fid%3D1277954792%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));
                     </script>
 
+					<div title="TrustAsia 安全签章" id="myssl_seal" onclick="window.open('https://seal.trustasia.com/seal/detail?domain=tdou.cc','TrustAsia 安全签章','height=800,width=470,top=0,right=0,toolbar=no,menubar=no,scrollbars=no,resizable=no,location=no,status=no')" style="text-align: center"><img src="https://sealres.trustasia.com/seal/img/1x/seal.png?domain=tdou.cc" alt="TrustAsia 安全签章" style="width: 130px;height: auto; cursor: pointer"></div>
+
                 </div>
             </div>
             <% if(flagcounter_href){ %>
