--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -59,7 +59,7 @@ var flagcounter_img_src = config.flagcounter_img_src;
                     <div title="TrustAsia 安全签章" id="myssl_seal" onclick="window.open('https://seal.trustasia.com/seal/detail?domain=tdou.cc','TrustAsia 安全签章','height=800,width=470,top=0,right=0,toolbar=no,menubar=no,scrollbars=no,resizable=no,location=no,status=no')" style="text-align: center"><img src="https://sealres.trustasia.com/seal/img/1x/seal.png?domain=tdou.cc" alt="TrustAsia 安全签章" style="width: 130px;height: auto; cursor: pointer"></div>
 
                     <!-- firebase sdk -->
-                    <%- partial('_widget/google-adscene') %>
+                    <%- partial('_widget/firebase-sdk') %>
 
         </footer>
     </div>
